<resources>
    <string name="app_name">Actividad15</string>
    <string name="mas">+</string>
    <string name="igual">=</string>
    <string name="coma">.</string>
    <string name="menos">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="x">x</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="divid">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="delete">Delete</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="perc">%</string>
    <string name="pt">.</string>
    <string name="nul" />
</resources>